--- a/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
@@ -96,7 +96,7 @@
                         <p:outputLabel value="Service Type:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.serviceType}" />
                         <p:outputLabel value="Listed Price Per TEU:" /><p:spacer width="20" height="20" />
-                        <h:outputText value="#{generateQuotationManagedBean.selectedRequest.price}" />
+                        <h:outputText value="#{generateQuotationManagedBean.selectedRequest.serviceCatalog.pricePerTEU}" />
                         <p:outputLabel value="Start Date:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{generateQuotationManagedBean.selectedRequest.startDate}" />
                         <p:outputLabel value="End Date:" /><p:spacer width="20" height="20" />
